// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PreviewButton when not previewing 1`] = `
<div>
  <div
    class="preview-button-container"
  >
    <div
      class="img-container"
      title="preview_title"
    >
      <img
        draggable="false"
        src="img/top-bar/icon-camera.svg"
      />
    </div>
  </div>
</div>
`;

exports[`test PreviewButton when path previewing 1`] = `<div />`;

exports[`test PreviewButton when previewing and not support borderless 1`] = `
<div>
  <div
    class="preview-button-container previewing"
  >
    <div
      class="img-container"
      title="preview_title"
    >
      <img
        draggable="false"
        src="img/top-bar/icon-camera.svg"
      />
    </div>
    <div
      class="title"
    >
      PREVIEW
    </div>
  </div>
</div>
`;

exports[`test PreviewButton when previewing and support borderless 1`] = `
<div>
  <div
    class="preview-button-container previewing"
  >
    <div
      class="img-container"
      title="preview_title"
    >
      <img
        draggable="false"
        src="img/top-bar/icon-camera.svg"
      />
    </div>
    <div
      class="title"
    >
      PREVIEW (OPEN BOTTOM)
    </div>
  </div>
</div>
`;
